# oakx-oger

./: .cruft.json  .gitignore  README.md  genindex.html  index.html  intro.html  modules.html  oakx_oger.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
_sources/: index.rst.txt  intro.md.txt  modules.rst.txt  oakx_oger.rst.txt
docs/: conf.py  index.rst  intro.md
src/oakx_oger/: __init__.py  _version.py  cli.py  oger_implementation.py
src/oakx_oger/input/: README.md
src/oakx_oger/input/tmp/: input.txt  text.txt
src/oakx_oger/output/: README.md
src/oakx_oger/stopwords/: stopwords.txt
src/oakx_oger/synonymizer/: __init__.py  rules.yaml  synonym_rules.yaml  synonymize.py
src/oakx_oger/terms/: README.md
tests/: __init__.py  test_oger_implementation.py  test_plugin.py
tests/output/: None.tsv  None_postProcessed.tsv
tests/terms/: pato_termlist.tsv.pickle
