[tool.poetry]
name = "oakx-oger"
version = "0.1.0"
description = "oakx-oger"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
setuptools = "^65.0.1"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
oaklib = "^0.1.49"
OGER = "^1.5"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-click = "^4.3.0"

[tool.poetry.scripts]
oaker = "oakx_oger.cli:main"

[tool.poetry.plugins."oaklib.plugins"]
oger = "oakx_oger.oger_implementation:OGERImplementation"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser",
    ]

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
