[tool.poetry]
name = "oakx-oger"
version = "0.1.0"
description = "\"oakx-oger\""
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "BSD 3"
readme = "README.md"
packages = [{include = "oakx_oger", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "<=66.1.1"
oaklib = "^0.5.0"
OGER = "^1.5"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^7.3.0", extras = ["docs"]}
Sphinx = {version = "^6.1.3", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.2.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.22", extras = ["docs"]}
sphinx-click = {version = "^4.4.0", extras = ["docs"]}
myst-parser = {version = "^1.0.0", extras = ["docs"]}

[tool.poetry.scripts]
oaker = "oakx_oger.cli:main"

[tool.poetry.plugins."oaklib.plugins"]
oger = "oakx_oger.oger_implementation:OGERImplementation"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser",
    ]
    
[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
