[tool.poetry]
name = "oakx-oger"
version = "0.0.0"
description = "OGER plugin for oaklib"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
oaklib = ">=0.5.19"
click = "^8.1.7"
OGER = "^1.5"
importlib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.1"
Sphinx = "^7.2.5"
sphinx-rtd-theme = "^1.3.0"
sphinx-click = "^5.0.1"
sphinx-autodoc-typehints = "^1.24.0"
pytest = "^7.4.1"
myst-parser = "^2.0.0"

[tool.poetry.scripts]
oaker = "oakx_oger.cli:main"

[tool.poetry.plugins."oaklib.plugins"]
oger = "oakx_oger.oger_implementation:OGERImplementation"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser",
    ]

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
